# STGraph

./: .coverage  .gitignore  .pylintrc  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  greetings.yml  pylint.yaml  pytest.yaml  ruff.yaml
benchmarking/: README.md  bench.sh  build-dataset-2M.sh  build-dataset-5M.sh  build-dataset-dynamic-ext.sh  build-dataset-new.sh  build-dataset.sh  dynamic-bench-ext.sh  dynamic-bench.sh  ext-build-dataset.sh  ext-dynamic-bench-100.sh  ext-dynamic-bench.sh  ext-static-bench-100.sh  ext-static-bench.sh  pygt-bench.sh  static-bench-new.sh  static-bench-stgraph.sh  static-bench.sh
benchmarking/dataset/: gen_dataset.py  preprocess_temporal_data.py  readme.md
benchmarking/dataset_builder/: dataset_builder.py  dataset_builder_modified.py  dataset_builder_np.py  dataset_builder_static.py
benchmarking/results/: README.md  result_generator_static.py
dataset/METRLA/: metrla_creator.py  viewer.py  wiki_view.py
dataset/MontevideoBus/: dataset_creator.py
docs/: README.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api_references/: seastar_datasets.rst  seastar_gnn.rst  seastar_temporal_gnn.rst
docs/developers_guide/: extending_seastar.rst
docs/source/: conf.py  exp.rst  index.rst  installation.rst
docs/user_guide/: seastar tutorial.rst
docs_old/: index.rst
docs_old/developers_guide/: glossary.rst  release_notes.rst
docs_old/user_guide/: seastar tutorial.rst
examples/: README.md
exp/: .gitignore  run_exp.py  run_nb_access_bench.sh
exp/dataset/: gen_dataset.py  gen_dataset_rgcn.py  gen_roorah.py
exp/nb_access/: nb_access.py
profiler/: README.md  test_add  test_add.cu  test_profiler.py  test_vec_add  test_vec_add.cu
python/: .gitignore  pcsr_setup.py  setup.py
python/dynamic_graph/: dynamic_graph.py  main.py
python/graph/: seastar_graph.py
python/pcsr/: README.md  pcsr.cpp
python/pcsr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/seastar/: autodiff.py  execution_unit.py  executor.py  executor_v1.py  node.py  program.py  registry.py  val.py  zoom_v2.py
python/seastar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/seastar_graph/: engcovid_log.py  seastar_graph.py
python/seastar_graph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
seastar/: __init__.py
seastar/benchmark_tools/: memory_profiler.py  results.py  table.py  time_profiler.py
seastar/compiler/: __init__.py  autodiff.py  execution_unit.py  executor.py  node.py  op.py  program.py  registry.py  schema.py  seastar.py  utils.py  val.py  zoom.py  zoom_v2.py
seastar/dataset/: BitcoinOTC.py  BoorahBase.py  CoraDataLoader.py  EnglandCOVID.py  EnglandCovidDataLoader.py  cora.py  (+13 more)
stgraph/: __init__.py
tests/: .coverage  README.md
tutorials/: README.md
(+457 files in other folders)
