[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"*" = ["*.so", "*.jinja"]

[project]
name = "stgraph"
version = "1.0.0"
authors = []
description = "Vertex-Centric Approach to building Graph Neural Networks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'Jinja2>=2',
    'pynvrtc',
    'pydot',
    'networkx',
    'sympy'
]


[project.urls]
"Homepage" = "https://github.com/bfGraph/STGraph"