[tool.poetry]
name = "stgraph"
version = "1.0.0"
description = "Vertex Centric approach for building GNN/TGNNs"
authors = [
    "Nithin Puthalath Manoj <nithinp.manoj@gmail.com>",
    "Joel Mathew Cherian <joelmathewcherian@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "3.1"
jinja2 = "3.1.2"
pydot = "^1.4.2"
pynvrtc = "^9.2"
sympy = "1.11.1"
cuda-python = "12.1.0"
gdown = "4.6.6"
numpy = "1.23.4"
pandas = "1.3.5"
prettytable = "3.7.0"
pybind11 = "2.10.4"
pynvml = "11.5.0"
rich = "13.3.5"
snoop = "0.4.2"
termcolor = "2.3.0"
tqdm = "4.64.1"


[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
