[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"*" = ["*.so", "*.jinja"]

[project]
name = "stgraph"
version = "1.1.0"
description = "🌟 Vertex Centric approach for building GNN/TGNNs"
readme = "README.md"
authors = [
    { name = "Joel Mathew Cherian", email = "joelmathewcherian@gmail.com" },
    { name = "Nithin Puthalath Manoj", email = "nithinp.manoj@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
keywords = ["GNN", "TGNN", "GPU Programming"]
requires-python = ">=3.8"
dependencies = [
    'Jinja2 >= 3.1.3',
    'pynvrtc >= 9.2',
    'pydot',
    'networkx >= 3.1',
    'sympy >= 1.11.1',
    "cuda-python >= 12.1.0",
    "numpy >= 1.23.4",
    "pandas >= 1.3.5",
    "prettytable >= 3.7.0",
    "pybind11 >= 2.10.4",
    "rich >= 13.3.5",
    "snoop >= 0.4.2",
    "termcolor >= 2.3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest >= 7.4.3",
    "pytest-cov >= 4.1.0",
    "tqdm >= 4.66.3",
    "build >= 0.10.0",
    "gdown >= 4.6.6",
    "pynvml >= 11.5.0",
    "sphinx-rtd-theme >= 1.2.0",
]


[project.urls]
"Homepage" = "https://github.com/bfGraph/STGraph"
